[tool.poetry]
name = "qgis-mojxml-plugin"
version = "0.0.0"
description = "A QGIS plugin for converting Japanese “MOJ Map XML” (land registration polygons in Japan) into geospatial formats."
authors = ["MIERUNE Inc. <info@mierune.co.jp>"]
readme = "README.md"
packages = [{ include = "mojxml_plugin" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyqt5-stubs = "^5.15.6.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]

[tool.ruff]
select = ["F", "E", "W", "B", "C90", "N", "I"]
ignore = ["N802", "E501"]
target-version = "py38"

[tool.coverage.run]
source = ['mojxml_plugin']
omit = ['mojxml_plugin/mojxml/*']
concurrency = ["thread"]
